--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -14,10 +14,10 @@ spring:
     enabled: true
   
   mail:
-    host: smtp.gmail.com
-    port: 587
-    username: ${MAIL_USERNAME:gouravkrsah78@gmail.com}
-    password: ${MAIL_PASSWORD:byqm pgup kojq vzwv}
+    host: ${MAIL_HOST:smtp.gmail.com}
+    port: ${MAIL_PORT:587}
+    username: ${MAIL_USERNAME:}
+    password: ${MAIL_PASSWORD:}
     properties:
       mail:
         smtp:
@@ -26,6 +26,8 @@ spring:
             enable: true
           ssl:
             trust: smtp.gmail.com
+          connectiontimeout: 10000
+          timeout: 10000
 
 app:
   contact:
