--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -17,19 +17,22 @@ spring:
   
   mail:
     host: ${MAIL_HOST:smtp.gmail.com}
-    port: ${MAIL_PORT:587}
+    port: ${MAIL_PORT:465}
     username: ${MAIL_USERNAME:gouravkrsah78@gmail.com}
     password: ${MAIL_PASSWORD:byqmpgupkojqvzwv}
     properties:
       mail:
         smtp:
           auth: true
-          starttls:
-            enable: true
           ssl:
+            enable: true
             trust: smtp.gmail.com
-          connectiontimeout: 10000
-          timeout: 10000
+          connectiontimeout: 30000
+          timeout: 30000
+          socketFactory:
+            port: 465
+            class: javax.net.ssl.SSLSocketFactory
+            fallback: false
 
 app:
   contact:
