--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -15,17 +15,22 @@ spring:
   
   mail:
     host: smtp.gmail.com
-    port: 587
+    port: 465
     username: gouravkrsah78@gmail.com
     password: byqmpgupkojqvzwv
     properties:
       mail:
         smtp:
           auth: true
-          starttls:
-            enable: true
           ssl:
+            enable: true
             trust: smtp.gmail.com
+          connectiontimeout: 30000
+          timeout: 30000
+          socketFactory:
+            port: 465
+            class: javax.net.ssl.SSLSocketFactory
+            fallback: false
 
 app:
   contact:
