--- a/render.yaml
+++ b/render.yaml
@@ -21,3 +21,7 @@ services:
         sync: false
       - key: CONTACT_EMAIL
         sync: false
+      - key: SENDGRID_API_KEY
+        sync: false
+      - key: SENDGRID_FROM_EMAIL
+        value: gouravkrsah78@gmail.com
