Add Resend API as alternative email service - Add Resend API integration with better debugging - Update render.yaml with Resend environment variables - Resend is easier to set up than SendGrid

--- a/render.yaml
+++ b/render.yaml
@@ -25,3 +25,7 @@ services:
         sync: false
       - key: SENDGRID_FROM_EMAIL
         value: gouravkrsah78@gmail.com
+      - key: RESEND_API_KEY
+        sync: false
+      - key: RESEND_FROM_EMAIL
+        value: gouravkrsah78@gmail.com
