--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -17,22 +17,20 @@ spring:
   
   mail:
     host: ${MAIL_HOST:smtp.gmail.com}
-    port: ${MAIL_PORT:465}
+    port: ${MAIL_PORT:587}
     username: ${MAIL_USERNAME:gouravkrsah78@gmail.com}
     password: ${MAIL_PASSWORD:byqmpgupkojqvzwv}
     properties:
       mail:
         smtp:
           auth: true
-          ssl:
+          starttls:
             enable: true
+            required: true
+          ssl:
             trust: smtp.gmail.com
           connectiontimeout: 30000
           timeout: 30000
-          socketFactory:
-            port: 465
-            class: javax.net.ssl.SSLSocketFactory
-            fallback: false
 
 app:
   contact:
