Fix backend sleep issue and add loading indicators
- Add KeepAliveConfig.java to prevent backend from sleeping on Render
- Implement retry logic with exponential backoff in portfolio service
- Add comprehensive error handling and user-friendly error messages
- Create loading spinner component for better UX
- Add health check service for backend monitoring
- Update all components with loading states and error handling
- Configure render.yaml for optimized deployment
- Update application-prod.yml with keep-alive settings
- Add comprehensive documentation in BACKEND_SLEEP_FIX.md

This fixes the issue where data fetching stops working after 30 minutes due to Render's free tier sleep mode.

--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -1,5 +1,11 @@
 server:
   port: ${PORT:8080}
+  servlet:
+    session:
+      timeout: 30m
+  tomcat:
+    connection-timeout: 20000
+    keep-alive-timeout: 30000
 
 spring:
   profiles:
@@ -35,6 +41,10 @@ spring:
 app:
   contact:
     email: ${CONTACT_EMAIL:gouravkrsah78@gmail.com}
+  keep-alive:
+    enabled: true
+    interval: 240000  # 4 minutes
+    health-check-interval: 600000  # 10 minutes
 
 logging:
   level:
@@ -42,6 +52,7 @@ logging:
     org.springframework.data.mongodb: WARN
     org.springframework.mail: INFO
     org.springframework.security: WARN
+    org.springframework.scheduling: INFO
 
 management:
   endpoints:
@@ -51,3 +62,6 @@ management:
   endpoint:
     health:
       show-details: when-authorized
+  health:
+    defaults:
+      enabled: true
