--- a/render.yaml
+++ b/render.yaml
@@ -1,31 +1,25 @@
-services:
-  - type: web
-    name: portfolio-backend
-    env: java
-    plan: free
-    buildCommand: ./mvnw clean package -DskipTests
-    startCommand: java -jar target/portfolio-backend-0.0.1-SNAPSHOT.jar
-    healthCheckPath: /actuator/health
-    envVars:
-      - key: SPRING_PROFILES_ACTIVE
-        value: production
-      - key: SPRING_DATA_MONGODB_URI
-        sync: false
-      - key: ADMIN_USERNAME
-        value: admin
-      - key: ADMIN_PASSWORD
-        sync: false
-      - key: MAIL_USERNAME
-        sync: false
-      - key: MAIL_PASSWORD
-        sync: false
-      - key: CONTACT_EMAIL
-        sync: false
-      - key: SENDGRID_API_KEY
-        sync: false
-      - key: SENDGRID_FROM_EMAIL
-        value: gouravkrsah78@gmail.com
-      - key: RESEND_API_KEY
-        sync: false
-      - key: RESEND_FROM_EMAIL
-        value: gouravkrsah78@gmail.com
+# Render configuration to prevent sleep mode
+# This file helps keep the backend service alive
+
+# Health check endpoint configuration
+HEALTH_CHECK_PATH: /api/health
+
+# Keep alive settings
+KEEP_ALIVE_INTERVAL: 300  # 5 minutes
+
+# Service configuration
+SERVICE_TYPE: web
+AUTO_DEPLOY: true
+
+# Environment variables
+NODE_ENV: production
+SPRING_PROFILES_ACTIVE: prod
+
+# Resource limits
+MEMORY_LIMIT: 512MB
+CPU_LIMIT: 0.5
+
+# Health check configuration
+HEALTH_CHECK_TIMEOUT: 30
+HEALTH_CHECK_INTERVAL: 60
+HEALTH_CHECK_RETRIES: 3
